# cmmc

./: .gitignore  Makefile.am  Makefile.simple  README.md  configure.ac  lexer.l  main.c  symbol-table.c  symbol-table.h
m4/: ccmmc_compile_c11.m4
pattern/: int-div-by-zero.cmm  negative-array-size.cmm  not-constant.cmm  not-function.cmm  not-scalar-or-array.cmm  not-type.cmm  not-var.cmm  should-pass.cmm  string-expr.cmm  void-expr.cmm  void-var-and-array.cmm
src/: ast.c  ast.h  code-generation.c  code-generation.h  common.h  draw.c  draw.h  lexer.l  main.c  parser.y  register.c  register.h  semantic-analysis.c  semantic-analysis.h  state.c  state.h  symbol-table.c  symbol-table.h
